--- a/app/src/main/res/layout/activity_dashboard3.xml
+++ b/app/src/main/res/layout/activity_dashboard3.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Dashboard">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".HomeActivity"
@@ -22,29 +20,40 @@
             app:layout_collapseMode="parallax">
 
             <TextView
-                android:id="@+id/txtTanggal"
-                android:text="Today, Oktober 22"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
+                android:id="@+id/txtKota"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/text_temp_max"
+                android:layout_above="@+id/txtTanggal"
+                android:layout_marginStart="40dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"/>
+                android:text="Cikarang"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/text_temp_max"
+                android:id="@+id/txtTanggal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/text_temp"
+                android:layout_marginStart="40dp"
+                android:layout_marginLeft="40dp"
+                android:text="Today, April 1"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/text_temp"
                 android:text="90\u00B0"
                 android:textSize="45sp"
                 android:textColor="@android:color/black"
-                android:layout_above="@+id/text_temp_min"
+                android:layout_above="@+id/text_temp_min_max"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"/>
 
             <TextView
-                android:id="@+id/text_temp_min"
+                android:id="@+id/text_temp_min_max"
                 android:text="78\u00B0"
                 android:textSize="25sp"
                 android:textColor="@android:color/black"
