--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="100dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/icon"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:srcCompat="@mipmap/ic_launcher"
@@ -18,36 +18,36 @@
         android:layout_marginBottom="8dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Tomorrow"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintLeft_toRightOf="@+id/icon"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/textView3"
+        app:layout_constraintRight_toLeftOf="@+id/temp_range"
         android:layout_marginRight="8dp"
         app:layout_constraintHorizontal_bias="0.067"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/desc"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Clouds"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintRight_toLeftOf="@+id/textView4"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.051" />
+        android:layout_marginBottom="10dp"
+        android:text="Clouds"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintLeft_toRightOf="@+id/icon"
+        app:layout_constraintRight_toLeftOf="@+id/temp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="26\u00B0"
@@ -59,14 +59,14 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/temp_range"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="20\u00B0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/temp"
         android:layout_marginRight="41dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_bias="0.0" />
