--- a/app/src/main/res/layout/activity_dashboard3.xml
+++ b/app/src/main/res/layout/activity_dashboard3.xml
@@ -14,9 +14,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
+            android:layout_height="198dp"
             android:fitsSystemWindows="true"
+            android:scaleType="centerCrop"
             app:layout_collapseMode="parallax">
 
             <TextView
@@ -43,51 +43,51 @@
 
             <TextView
                 android:id="@+id/text_temp"
-                android:text="90\u00B0"
-                android:textSize="45sp"
-                android:textColor="@android:color/black"
-                android:layout_above="@+id/text_temp_min_max"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_above="@+id/text_temp_min_max"
+                android:layout_marginStart="40dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"/>
+                android:text="90\u00B0"
+                android:textColor="@android:color/black"
+                android:textSize="45sp" />
 
             <TextView
                 android:id="@+id/text_temp_min_max"
-                android:text="78\u00B0"
-                android:textSize="25sp"
-                android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"/>
+                android:layout_marginBottom="20dp"
+                android:text="78\u00B0"
+                android:textColor="@android:color/black"
+                android:textSize="25sp" />
 
             <ImageView
                 android:id="@+id/image_desc"
-                android:layout_above="@+id/text_desc"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_marginRight="30dp"
-                android:layout_alignParentRight="true"
+                android:layout_above="@+id/text_desc"
                 android:layout_alignParentEnd="true"
-                app:srcCompat="@android:mipmap/sym_def_app_icon"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="30dp"
+                app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
             <TextView
                 android:id="@+id/text_desc"
-                android:text="light rain"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:layout_marginEnd="30dp"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                android:text="light rain"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
